--- a/index.html
+++ b/index.html
@@ -1,88 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>iTimer - Таймер и секундомер с возобновлением работы при обновлении страницы</title>
+    <title>Webpack - learn</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.png" type="imageng">
-    <!--build:css css/vendor.css-->
-    <link rel="stylesheet" href="css/lib/normalize.min.css">
-    <!--endbuild-->
-    <!--build:css css/main.css-->
-    <link rel="stylesheet" href="css/main.css">
-    <!--endbuild-->
-    <!--build:js js/main.js defer-->
-    <script defer src="js/plugins/only_number.js"></script>
-    <script defer src="js/iTimer/iTimer_base.js"></script>
-    <script defer src="js/iTimer/iTimer_stopwatch.js"></script>
-    <script defer src="js/iTimer/iTimer_timer.js"></script>
-    <script defer src="js/main.js"></script>
-    <!--endbuild-->
   </head>
   <body>
-    <div class="wrapper">
-      <header class="section header">
-        <div class="container header__container">
-          <div class="header__logo">iTimer</div>
-          <ul class="header__menu"> 
-            <li class="header__menuitem select_stopwatch" title="Секундомер (Alt + S)"><a><i class="icon">&#xe801;</i></a></li>
-            <li class="header__menuitem select_timer" title="Таймер (Alt + T)"><a><i class="icon">&#xe803;</i></a></li>
-            <li class="header__menuitem header__set" title="Настройки"><a><i class="icon">&#xe804; </i></a></li>
-            <li class="header__menuitem header__help" title="Справка"><a><i class="icon">&#xe800;</i></a></li>
-          </ul>
-        </div>
-      </header>
-      <main class="section mainsection">
-        <div class="container mainsection__container"> 
-          <div class="iTimer">
-            <!--stopwatch-->
-            <div class="iTimer__type stopwatch">
-              <div class="iTimer__time stopwatch__time">0:00:00.000</div>
-              <div class="iTimer__controls_container"> 
-                <button class="iTimer__control stopwatch__reset" title="Alt + R">Сброс</button>
-                <button class="iTimer__control stopwatch__start" title="Пробел">Старт</button>
-                <button class="iTimer__control stopwatch__lap" title="Alt + L ">Lap</button>
-                <button class="iTimer__control stopwatch__stop" title="Пробел">Стоп                     </button>
-              </div>
-              <ul class="stopwatch__lapslist"></ul>
-            </div>
-            <!--timer-->
-            <div class="iTimer__type timer">
-              <div class="iTimer__time timer__set_container">
-                <input class="timer__set timer__seth" type="number" min="0" max="99" step="1" value="0" title="F1">
-                <input class="timer__set timer__setm" type="number" min="0" max="59" step="1" value="0" title="F2">
-                <input class="timer__set timer__sets" type="number" min="0" max="59" step="1" value="0" title="F3">
-                <input class="timer__set timer__setms" type="number" min="0" max="999" step="1" value="0" title="F4">
-                <div class="timer__setcontrol_container">
-                  <button class="timer__setcontrol timer__save" title="Сохранить (Enter)"><i class="icon">&#xe805;</i></button>
-                  <button class="timer__setcontrol timer__cancel" title="Oтменить (Esc)"><i class="icon">&#xe806;</i></button>
-                </div>
-              </div>
-              <div class="timer__time_container">
-                <div class="iTimer__time timer__time">0:00:00.000</div>
-                <div class="timer__setcontrol_container">
-                  <button class="timer__setcontrol timer__edit" title="Установить время (Alt + E)"><i class="icon">&#xe802;</i></button>
-                </div>
-              </div>
-              <div class="iTimer__controls_container">
-                <button class="iTimer__control timer__reset" title="Alt + R">Сброс</button>
-                <button class="iTimer__control timer__start" title="Пробел">Старт</button>
-                <button class="iTimer__control timer__stop" title="Пробел">Стоп</button>
-              </div>
-              <div class="iTimer__templatesContainer">
-                <!--button.iTimer__newtemplate-->
-                <div class="iTimer__templates"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
-      <footer class="section footer">
-        <div class="container footer__container">
-          <p class="footer__hint">Подсказка: если во время работы iTimer-а вы закроете страницу, просто откройте ее и его работа возобновится.</p>
-          <p>Разработчик: Контакт1, Контакт2, Контакт3</p>
-        </div>
-      </footer>
-    </div>
+    <nav class="nav"></nav>
   </body>
 </html>
